--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+## avoiding large files in data repository to be seen
+/data
+data/
+/Data
+Data/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
